small bugs - make dice spin the same and don't collapse parent nodes upon all nav rerenders

--- a/src/main.css
+++ b/src/main.css
@@ -862,7 +862,7 @@ table.keys td:nth-child(2) {
 
 .node-status.status-pending {
   color: var(--warning);
-  animation: spin 1s linear infinite;
+  animation: spin 0.6s linear infinite;
 }
 
 .node-status.status-unread {
@@ -1321,7 +1321,7 @@ table.keys td:nth-child(2) {
 }
 
 .die.rolling {
-  animation: spin 0.4s linear infinite;
+  animation: spin 0.6s linear infinite;
   opacity: 1;
   visibility: visible;
 }
